--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ActivitiesForm/FrmAddActivities.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ActivitiesForm/FrmAddActivities.resx
@@ -117,6 +117,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AddBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAzBJREFUWEftlU9M01Acx+efox6NUW8mW9u1HeDNi8YY9cBNoxd17QZT5mBtjX/i
+        CTxxUqJBEI0HogmRbB1DAYn/ADWytkAEY9SQ6MloAgYvJibK873yWMf2G2xFEw9+k0/SZL/f9/t7r+91
+        nv8qW8izpmJC21ZhansCY8pBAnmuGju7lVb8HfFjChcw1RbRUD4GLA1BCKb2QbTUS4J1mqVtqxdZrWAp
+        XVBgUQxtPmBqd3aY6hZq404VplodMNSvYEhpzAQs5QC1K0+iqUoBQ/kFmJaFYGk/BUs9Sm1L08LKVx++
+        CBkCe+6n9svLfucZZQ4yykV5dwvNzH2zaXh7E6zJRTSVWeFlfDONKS7R1O5CBvnEX9/IDlA/dR2syQff
+        jk4aA8u+akAjRMNkhzPAq3awpgBDna8cj3tpXKGEUbUNbARwNQAho1ymcXnCXzjRiM+CTQBuB+CN+Bea
+        uFTk8EENxXC9A5jK8YZNNNYR3v5qqJicdoiO6YHsAO3T/WANAfKsehHfS2Md+Udi56HixRC3QJ78s5hC
+        Yx3xQ9FmqBgyLQfIkx+ONtFYR/zjaBNUXPe8BeTaVDob0jqZAmsIkKf/4ckLNNYRN1hzDCwePAESM1qz
+        A0RHr4I1BMiT6Y0corGOfAmJFUcVsAHC7S0gGd5EaDuNdbT7aeN6/kn0B9QE4XYA7lHdd09j41oau1Te
+        vvADqAnC1QAm3v6+cA+NK5Q3KVULwzG4OQ83AwhDMcQm5X00DhDeGjYtv8F/GqBBLuUOIGYU5EuHJsgn
+        n6bB8iaCu7iBWiQCJrnwIzHE6LKNMFIP1uTC3Y/Ms/rxnTRmeTFJuZnDV2i5IcSMagcTVro95Dpiz4vU
+        vgR1H16HV9bF9UeQWMLrKAbZduLBJKXbRU9+MZFriRvbmJ4Qsg8mPsFQCAiutQ9cOox8unyFLIjali+f
+        HjziSwQ/s/fCCH8n8HbH4VAMeRV+XMP21iCvLn9iUlLhF8+NmJ7wRl9KOsck5Gly6Nh0CHF9tYgbiCyA
+        n1m8U+Q3rx58j9/3GX/3qQ20/Q8KXyEmJYs+PRTFYS2YTgp+lurYZFhY8Zr9W/J4fgOnakRloClHagAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
